github_data_collector/src/data/issue_comment/vk-com_kphp-kdb.txt
I been trying to run Strapi new server on my visual studio terminal and just been having errors the errors say; strapi new can only be called in an empty directory some please help me. 

I created another thread... That Russian jibber jabber was scaring me over there...
All crews standby, captain here speaking.
Никогда не видел настолько плохо реализованный форк ХипХопа, и вот опять.
```bash
vv/am-amortization.c:59:8: error: redefinition of ‘time_amortization_table_fast_exp’
 double time_amortization_table_fast_exp (time_amortization_table_t *self, int dt) {
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from vv/am-amortization.c:23:0:
vv/am-amortization.h:42:22: note: previous definition of ‘time_amortization_table_fast_exp’ was here
 extern inline double time_amortization_table_fast_exp (time_amortization_table_t *self, int dt) {
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Makefile:280: recipe for target 'objs/vv/am-amortization.o' failed
make: *** [objs/vv/am-amortization.o] Error 1
make: *** Waiting for unfinished jobs....
```
Если закомментировать одно из объявлений, получаю ошибку на этапе линковки:
```bash
objs/vv/am-amortization.o: In function `time_amortization_table_fast_exp':
/home/mutex/src/kphp-kdb/vv/am-amortization.h:44: multiple definition of `time_amortization_table_fast_exp'
objs/targ/targ-weights.o:/home/mutex/src/kphp-kdb/vv/am-amortization.h:44: first defined here
collect2: error: ld returned 1 exit status
Makefile:329: recipe for target 'objs/bin/targ-engine' failed
make: *** [objs/bin/targ-engine] Error 1
make: *** Waiting for unfinished jobs....
[mutex@hp kphp-kdb]$ (master)*$ mc
```
Hello,
I tried to evaluate it, and tried to build it on debian 8.
Makefile not working at all.

Next question: Is there somewhere a definition of the supported language parts?

Thanks

lost part of the code because the function does not display the removal of privacy

lost part of the code because the function does not display the removal of privacy

Затухание происходит по экспоненциальному закону с основанием "1/e" вместо обычного (для понятия полураспад) "1/2".

Fix: hints-data.tl:
-int RATING_NORM = 4 \* 7 \* 24 \* 60 \* 60;
+int RATING_NORM = 4 \* 7 \* 24 \* 60 \* 60 \* log(2);
